--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div id="app">
-        <h1>Добро пожаловать в RPG!</h1>
-        <button id="startGame">Начать игру</button>
+        <h1>Выберите класс персонажа</h1>
+        <button onclick="chooseClass('Воин')">Воин</button>
+        <button onclick="chooseClass('Маг')">Маг</button>
+        <button onclick="chooseClass('Лучник')">Лучник</button>
     </div>
     <script src="app.js"></script>
 </body>
