--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Общак</title>
+    <title>Общак - Mini App</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script> <!-- Telegram Web App API -->
 </head>
 <body>
-    <div id="app">
-        <h1>Чё делать, братан?</h1>
-        <button onclick="chooseAction('baryga')">Зайти к барыге</button>
-        <button onclick="chooseAction('walk')">Пройтись по району</button>
-        <button onclick="chooseAction('fight')">Сразиться с пацанами</button>
+    <div id="dialogue">
+        <div id="mentor-text">
+            <p id="mentor-speech">Э, пацан, ты кто такой? Ладно, помогу чутка. Жми, не тупи.</p>
+        </div>
+        <div id="choices">
+            <button onclick="chooseAction('baryga')">Зайти к барыге</button>
+            <button onclick="chooseAction('walk')">Пройтись по району</button>
+            <button onclick="chooseAction('fight')">Сразиться с пацанами</button>
+        </div>
     </div>
 </body>
 </html>
